---
source: compiler-core/src/javascript/tests/externals.rs
expression: "\n@external(javascript, \"utils\", \"inspect\")\npub fn show(x: anything) -> Nil"
---
----- SOURCE CODE

@external(javascript, "utils", "inspect")
pub fn show(x: anything) -> Nil

----- COMPILED JAVASCRIPT
import { inspect as show } from "utils";

export { show };
